--- a/06-TDD-express/package.json
+++ b/06-TDD-express/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint . --fix",
-    "test": "jest --updateSnapshot"
+    "test": "jest --updateSnapshot",
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/main/server/server.ts"
   },
   "pre-commit": [
     "lint"
@@ -15,17 +16,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.27.0",
     "jest": "^27.0.3",
     "nodemon": "^2.0.7",
     "pre-commit": "^1.2.2",
+    "supertest": "^6.1.3",
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.17.1",
+    "fast-glob": "^3.2.5"
+  }
 }
